--- a/.env
+++ b/.env
@@ -1,4 +1,3 @@
-DB_TYPE=
 DB_HOST=127.0.0.1
 PORT=3306
 DB_USERNAME=root
@@ -7,3 +6,5 @@ DB_NAME=nest-events
 
 APP_URL=mywebsite.com
 SUPPORT_EMAIL=support@${APP_URL}
+
+AUTH_SECRET=secret12356
